test/2/circular-def.err
type error: test/2/circular-def.ploy:1:5-5: expected a value; `x` refers to a forward declaration.
  x = x
      ~
